# candle

./: Cargo.toml  README.md
candle-core/: Cargo.toml
candle-core/src/: op.rs
candle-core/src/cuda_backend/: device.rs
candle-core/src/quantized/: cuda.rs
candle-examples/examples/qwen/: main.rs
candle-flash-attn/: Cargo.toml  build.rs
candle-flash-attn-build/src/: lib.rs
candle-flash-attn/kernels/: flash_api.cu  flash_fwd_hdim128_sm80_driver.cu
candle-flash-attn/src/: lib.rs
candle-kernels/: build.rs
candle-kernels/src/: quantized.cu  reduce.cu
candle-nn/: Cargo.toml
candle-transformers/: Cargo.toml
candle-transformers/src/: utils.rs
candle-transformers/src/generation/: mod.rs
candle-transformers/src/models/: mod.rs
candle-ug/: Cargo.toml
