[package]
name = "candle-nn"
version = "0.9.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
candle = { path = "../candle-core", package = "candle-core", version = "0.9.2" }
half = { version = "2.5.0", features = ["num-traits", "use-intrinsics", "rand_distr"] }
thiserror = "2"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
num-traits = "0.2.15"
rayon = "1.7.0"
safetensors = "0.7.0"
serde = { version = "1.0.171", features = ["derive"] }
objc2-metal = { version = "0.3.1", optional = true }
candle-metal-kernels = { path = "../candle-metal-kernels", version = "0.9.2", optional = true }
libc = "0.2.147"

[dev-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "4.2.4", features = ["derive"] }
rand = "0.9.0"
rand_distr = "0.5.1"
criterion = { version = "0.8", default-features = false }

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate"]
cuda = ["candle/cuda"]
cudnn = ["candle/cudnn"]
mkl = ["dep:intel-mkl-src", "candle/mkl"]
metal = ["candle/metal", "dep:candle-metal-kernels", "dep:objc2-metal"]

[[bench]]
name = "bench_main"
harness = false
