[package]
name = "candle-transformers"
version = "0.9.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
accelerate-src = { version = "0.3.2", optional = true }
byteorder = "1.4.3"
candle = { path = "../candle-core", package = "candle-core", version = "0.9.2" }
candle-flash-attn = { path = "../candle-flash-attn", version = "0.9.2", optional = true }
candle-nn = { path = "../candle-nn", version = "0.9.2" }
fancy-regex = "0.17.0"
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"], optional = true }
num-traits = "0.2.15"
rand = "0.9.0"
rayon = "1.7.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.99"
serde_plain = "1.0.2"
tracing = "0.1.37"

[features]
default = []
accelerate = ["dep:accelerate-src", "candle/accelerate", "candle-nn/accelerate"]
cuda = ["candle/cuda", "candle-nn/cuda"]
cudnn = ["candle/cudnn", "candle-nn/cudnn"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
mkl = ["dep:intel-mkl-src", "candle/mkl", "candle-nn/mkl"]
metal = ["candle/metal", "candle-nn/metal"]
