[package]
name = "candle-ug"
version = "0.9.2"
edition = "2021"
description = "Minimalist ML framework."
repository = "https://github.com/huggingface/candle"
keywords = ["blas", "tensor", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"

[dependencies]
ug = "0.5.0"
ug-cuda = { version = "0.5.0", optional = true }
ug-metal = { version = "0.5.0", optional = true }

[features]
default = []
cuda = ["dep:ug-cuda"]
metal = ["dep:ug-metal"]
